# AiDEXX

./: .gitignore  build.gradle  gradle.properties  settings.gradle  versions.gradle
blecomm/: CMakeLists.txt  build.gradle
blecomm/src/main/: AndroidManifest.xml
blecomm/src/main/cpp/: aidexxcomm.h  bgmcomm.h  ble.cpp  ble.h  cgmscomm.h  pumpcomm.h
blecomm/src/main/cpp/constant/: bleoperation.h  globalconstants.h
blecomm/src/main/cpp/constant/bgm/: bgmconstants.h  bgmoperation.h
blecomm/src/main/cpp/constant/cgm/: aidexxconstants.h  aidexxoperation.h  cgmconstants.h  cgmoperation.h
blecomm/src/main/cpp/constant/pump/: pumpconstants.h  pumpoperation.h
blecomm/src/main/cpp/controller/: blecontroller.cpp  blecontroller.h  blecontrollerinfo.h
blecomm/src/main/cpp/controller/bgm/: bgmcontroller.cpp  bgmcontroller.h
blecomm/src/main/cpp/controller/cgm/: aidexxcontroller.cpp  aidexxcontroller.h  aidexxoperation.h  cgmcontroller.cpp  cgmcontroller.h
blecomm/src/main/cpp/controller/pump/: pumpcontroller.cpp  pumpcontroller.h
blecomm/src/main/cpp/devcomm/: devcommclass.cpp  devcommclass.h
blecomm/src/main/cpp/devcomm/CLibrary/: aes.c  aes.h  devcomm.c  devcomm.h  devcomm_config.h  global.h  lib_aes.c  lib_aes.h  lib_checksum.c  lib_checksum.h  lib_frame.c  lib_frame.h  lib_queue.c  lib_queue.h  task_comm.c  task_comm.h
blecomm/src/main/cpp/devcomm/CLibrary/driver/: drv.c  drv.h  drv_uart.c  drv_uart.h
blecomm/src/main/cpp/jni/: com_microtechmd_blecomm_BleAdapter.cpp  com_microtechmd_blecomm_BleAdapter.h  com_microtechmd_blecomm_controller_AidexXController.cpp  com_microtechmd_blecomm_controller_AidexXController.h  com_microtechmd_blecomm_controller_BgmController.cpp  com_microtechmd_blecomm_controller_BgmController.h  com_microtechmd_blecomm_controller_BleController.cpp  com_microtechmd_blecomm_controller_BleController.h  com_microtechmd_blecomm_controller_BleControllerInfo.h  com_microtechmd_blecomm_controller_BleController_DiscoveredCallback.h  com_microtechmd_blecomm_controller_BleController_MessageCallback.h  com_microtechmd_blecomm_controller_CgmController.cpp  com_microtechmd_blecomm_controller_CgmController.h  com_microtechmd_blecomm_controller_PumpController.cpp  com_microtechmd_blecomm_controller_PumpController.h  com_microtechmd_blecomm_parser_AidexXParser.cpp  com_microtechmd_blecomm_parser_AidexXParser.h  com_microtechmd_blecomm_parser_BgmParser.cpp  com_microtechmd_blecomm_parser_BgmParser.h  com_microtechmd_blecomm_parser_CgmParser.cpp  com_microtechmd_blecomm_parser_CgmParser.h  com_microtechmd_blecomm_parser_PumpParser.cpp  com_microtechmd_blecomm_parser_PumpParser.h  jni_bleadapter.h  jni_global.cpp  jni_global.h
blecomm/src/main/cpp/parser/: numberparser.cpp  numberparser.h  pumpbolusprofileparser.cpp  streamparser.cpp  streamparser.h
blecomm/src/main/cpp/parser/bgm/: bgmdeviceparser.cpp  bgmdeviceparser.h  bgmentities.h  bgmhistoryparser.cpp  bgmhistoryparser.h  bgmstateparser.cpp  bgmstateparser.h
blecomm/src/main/cpp/parser/cgm/: aidexxbroadcastparser.cpp  aidexxbroadcastparser.h  aidexxcalibrationsparser.cpp  aidexxcalibrationsparser.h  aidexxdatetimeparser.cpp  aidexxdeviceparser.cpp  aidexxdeviceparser.h  aidexxentities.h  aidexxfullbroadcastparser.cpp  aidexxfullbroadcastparser.h  aidexxhistoriesparser.cpp  aidexxinstanthistoryparser.cpp  aidexxinstanthistoryparser.h  aidexxscanresponseparser.cpp  aidexxscanresponseparser.h  cgmbroadcastparser.h  cgmdefaultparamparser.cpp  cgmdevicecheckparser.cpp  cgmdevicecheckparser.h  cgmdeviceparser.cpp  cgmdeviceparser.h  cgmentities.h  cgmhistoriesparser.cpp  cgmhistoriesparser.h  cgmhistoryparser.cpp  cgmhistoryparser.h
blecomm/src/main/cpp/parser/pump/: pumpbasalprofileparser.cpp  pumpbasalprofileparser.h  pumpbolusprofileparser.cpp  pumpbolusprofileparser.h  pumpbroadcastparser.cpp  pumpbroadcastparser.h  pumpdeviceparser.cpp  pumpdeviceparser.h  pumpentities.h  pumphistoryparser.cpp  pumphistoryparser.h  pumpsettingparser.cpp  pumpsettingparser.h
blecomm/src/main/cpp/util/: array.h  byteutils.cpp  byteutils.h  ctimer.cpp  ctimer.h  inputbytestream.cpp  inputbytestream.h  md5.cpp  md5.h  memutils.cpp  memutils.h
blecomm/src/main/cpp/util/encryptor/: aesencryptor.cpp  aesencryptor.h
blecomm/src/main/cpp/util/encryptor/cgm/: aidexxbroadcastparser.cpp  aidexxcalibrationsparser.cpp  aidexxdatetimeparser.h  aidexxdefaultparamsparser.cpp  aidexxdefaultparamsparser.h  aidexxentities.h  aidexxhistoriesparser.h  cgmbroadcastparser.cpp  cgmdefaultparamparser.cpp  cgmdefaultparamparser.h  cgmentities.h  cgmhistoriesparser.cpp  cgmhistoriesparser.h  cgmhistoryparser.cpp  cgmhistoryparser.h
blecomm/src/main/java/com/microtechmd/blecomm/: BleAdapter.java  BleInfo.java  BluetoothDeviceStore.java  NoConnectionBleAdapter.java
blecomm/src/main/java/com/microtechmd/blecomm/constant/: AidexXOperation.java  BleOperation.java  CgmOperation.java  Comm.java  Global.java  Glucose.java  History.java  Monitor.java  PumpSetting.java  System.java
blecomm/src/main/java/com/microtechmd/blecomm/controller/: AidexXController.java  BgmController.java  BleController.java  BleControllerInfo.java  BleControllerProxy.java  CgmController.java  PumpController.java  ScanResponseInfo.java
blecomm/src/main/java/com/microtechmd/blecomm/entity/: AidexXDatetimeEntity.java  BleCommand.java  BleMessage.java  NewSensorEntity.java
blecomm/src/main/java/com/microtechmd/blecomm/parser/: AidexXAbstractEntity.java  AidexXBroadcastEntity.java  BgmParser.java  (+17 more)
cgat/: CMakeLists.txt  build.gradle
cgat/src/main/: AndroidManifest.xml
cgat/src/main/cpp/: AAC.c  AAC.h  ADRR.c  ADRR.h  AUC.c  AUC.h  CONGA.c  CONGA.h  CV.c  CV.h  DailyTrendMean.c  DailyTrendMean.h  DailyTrendPrctile.c  DailyTrendPrctile.h  GRADE.c  GRADE.h  HBGD.c  HBGD.h  HBGI.c  HBGI.h  HbA1c.c  HbA1c.h  IQR.c  IQR.h  JINDEX.c  JINDEX.h  LAGE.c  LAGE.h  LBGD.c  LBGD.h  LBGI.c  LBGI.h  MAG.c  MAG.h  MAGE.c  MAGE.h  MAXBG.c  MAXBG.h  MBG.c  MBG.h  (+76 more)
cgat/src/main/java/com/microtechmd/cgat/: CGA.java  CGATools.java  CgmAgp.java
cgat/src/main/res/values/: strings.xml
(+1093 files in other folders)
